# httpc

./: .gitignore  .httpyac.js  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  httpc  httplib.c  httplib.h  httplib_test.c  linkedlist.c  linkedlist.h  main.c  request_parser.c  request_parser.h  response.c  response.h  test  test.http  test.sh 
.github/workflows/: static.yml
docs/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  httplib_8h_source.html  index.html  structnode.html
docs/search/: all_0.js  all_2.js  all_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
example/: CMakeLists.txt  main.c
include/: httplib.h
include/httplib/: httplib.h  response.h
internal/: linkedlist.c  linkedlist.h  response.h  tree.c  tree.h
linkedlist/: linkedlist.c  linkedlist.h  linkedlist_test.c
request_parser/: request_parser.c  request_parser.h
response/: response.c  response.h
src/: CMakeLists.txt  httplib.c  linkedlist.c  request_parser.c  request_parser_test  request_parser_test.c  response.c  tree.c
test/: CMakeLists.txt  linkedlist_test.c  main.c  request_parser_test.c  test.http
uri-tree/: tree.c  tree.h
